--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
         </section>
 
         <section class="no-match hidden" id="no-search-match">
-            <div class="no-match__img"><img src="./no-match.ico" alt="No match"></div>
+            <div class="no-match__img"><img src="./img/no-match.ico" alt="No match"></div>
             <div class="no-match__text">No character found by that name</div>
         </section>
     </main>
